--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "pg": "^8.12.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.3",
+    "socket.io": "^4.7.5",
     "tslib": "^2.7.0",
     "winston": "^3.14.2"
   },
